      function_data of devinfo for that function has all the bits set that are
      set in the cap parameter [LS]
- DC  Made vid_screen_shot support any of the video modes [DH]
- *** Fixes to the network stack to support sending/receiving broadcast packets
      properly [LS]
- GBA Fixed arch/types.h so the toolchain can compile. [HL]

KallistiOS version 1.2.0 -----------------------------------------------
- DC  Fix to use DCARM7_CFLAGS when compiling ARM driver [Christian Groessler == CG]
- DC  Fix for typo in vmu_pkg_crc() (submitted by anonymous)
- DC  Fix for incorrect source address in maple packets [Jim Ursetto == JU]
- *** Fix fputs() to not put an extra "\n" [Walter van Niftrik == WvN]
- DC  Fix Makefile for vqenc to work in more cases [Dan Potter == DP]
- DC  Integrated irq_disable() and irq_enable_exc() so that exceptions are
      always enabled. [DP]
- DC  Added pvr_mem_stats() (like malloc_stats but for PVR) [DP]
- *** Removed SYSCALL() usage in favor of thd_block_now() [DP]
- *** Primary timers switched to wakeup interval rather than periodic. [DP]
- *** Fix uninitialized mutex in semaphores [DP]
- *** Added generic waits, and changed semaphores/mutexes to use them [DP]
- DC  Added timer_ms_gettime64() [DP]
- DC  Fix for potential incorrectness in NDEBUG mode in pvr_txr_load_ex [DP]
- DC  Remove float usage in timer_ms_gettime() [DP]
- *** More proper condvar impl using genwaits [DP]
- DC  Strip trailing dots on extensionless ISO filenames (thanks waltervn for 
      pointing this out) [DP]
- *** Fix file descriptor owner bug in fdopen [Bero]
- *** Zlib workaround for KOS file descriptors being non-POSIX [Bero]
- *** Added more proper (mutex-paired) condvars, and tests [DP]
- DC  Tremor: bug fix for mono playback, guaranteed thread exit timing, added
      thd_sleep() to make threading more efficient [DP]
- *** Use dbgio_printk instead of dbgio_printf in printf [Bero]
- DC  System ASIC module now supports IRQ priority levels [DP]